provarAnt/00D190000000ZY2EAM/objects/Flat_Product__c.object
<CustomObject>
    <fields>
        <fullName>Flat_Rate__c</fullName>
        <label>Flat Rate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Flat Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Flat Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flat Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>